[gd_scene load_steps=2 format=3 uid="uid://bdl3fk61pia1f"]

[ext_resource type="Script" uid="uid://dqhica03cb4eb" path="res://ui/SettingsPanel.gd" id="1_1"]

[node name="SettingsPanel" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -200.0
offset_right = 250.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.1, 0.95)

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 12.0
offset_top = 12.0
offset_right = -12.0
offset_bottom = -12.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="VBox"]
layout_mode = 2
text = "LLM Settings"
horizontal_alignment = 1

[node name="ProviderBox" type="HBoxContainer" parent="VBox"]
layout_mode = 2

[node name="ProviderLabel" type="Label" parent="VBox/ProviderBox"]
layout_mode = 2
size_flags_horizontal = 2
text = "Provider:"

[node name="ProviderOption" type="OptionButton" parent="VBox/ProviderBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="URLBox" type="HBoxContainer" parent="VBox"]
layout_mode = 2

[node name="URLLabel" type="Label" parent="VBox/URLBox"]
layout_mode = 2
size_flags_horizontal = 2
text = "API URL:"

[node name="APIUrlEdit" type="LineEdit" parent="VBox/URLBox"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "https://api.openai.com/v1"

[node name="KeyBox" type="HBoxContainer" parent="VBox"]
layout_mode = 2

[node name="KeyLabel" type="Label" parent="VBox/KeyBox"]
layout_mode = 2
size_flags_horizontal = 2
text = "API Key:"

[node name="APIKeyEdit" type="LineEdit" parent="VBox/KeyBox"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "sk-..."
secret = true

[node name="ModelBox" type="HBoxContainer" parent="VBox"]
layout_mode = 2

[node name="ModelLabel" type="Label" parent="VBox/ModelBox"]
layout_mode = 2
size_flags_horizontal = 2
text = "Model:"

[node name="ModelEdit" type="LineEdit" parent="VBox/ModelBox"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "gpt-4o-mini"

[node name="SaveButton" type="Button" parent="VBox"]
layout_mode = 2
text = "Save"

[node name="CloseButton" type="Button" parent="VBox"]
layout_mode = 2
text = "Close"
